<resources>
    <string name="app_name">sunAccount</string>
    <string name="btn_browse">浏览</string>
    <string name="btn_inquire">搜索</string>
    <string name="btn_add">新增</string>
    <string name="btn_import">导入</string>
    <string name="btn_export">导出</string>
    <string name="tv_class">类别</string>
    <string name="tv_account">账号</string>
    <string name="tv_password">密码</string>
    <string name="btn_affirm">确认</string>
    <string name="tv_classfind">类别查找</string>
    <string name="btn_find">查找</string>
    <string name="btn_back">返回</string>
    <string name="btn_delete">删除</string>
    <string name="tv_hints">请先进行指纹识别</string>
</resources>
