<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.sun.sunaccount.MainActivity">

    <Button
        android:id="@+id/btn_browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_browse"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@drawable/browse"
        android:onClick="browse_func"/>
    <!--android:layout_marginTop="100dp"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_inquire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_inquire"
            android:layout_weight="1"
            android:drawableTop="@drawable/search"
            android:onClick="inquire_func"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:layout_weight="1"
            android:drawableTop="@drawable/add"
            android:onClick="add_func"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_import"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_import"
            android:onClick="import_func"/>
        <Button
            android:id="@+id/btn_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_export"
            android:layout_weight="1"
            android:drawableTop="@drawable/icon_export"
            android:onClick="export_func"/>
    </LinearLayout>

    <!--<Switch-->
        <!--android:id="@+id/switch_encry"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:checked="true"-->
        <!--tools:checked="false"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:text="加密"/>-->

</LinearLayout>
