<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sun.sunaccount.ChangeActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_ch_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_class"/>
        <EditText
            android:id="@+id/et_ch_class"
            android:maxLines="1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_ch_class"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_ch_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_account"/>
        <EditText
            android:id="@+id/et_ch_account"
            android:maxLines="1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_ch_account"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_ch_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"/>
        <EditText
            android:id="@+id/et_ch_password"
            android:maxLines="1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_ch_password"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_ch_affirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_affirm"
            android:onClick="affirm_ch_func"/>
            <!--android:enabled="false"-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            android:layout_toRightOf="@id/btn_ch_affirm"
            android:onClick="delete_ch_func"/>
    </RelativeLayout>
</LinearLayout>
